add config file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,5 @@ jobs:
           --apiKey="sn.UPBzZnJaX5DMsgV438IwcH2vScUmj3ZlLWklNsl61ULSzYuqyLoIDWR2swvANEtksq2MLBocSpKI1NQiTDDGZJFKzkUQFSFT"
           --designSystemId="24652" 
           --tokenFilePath "${{ github.workflows }}/astro_token/tokens.json"
+          --configFilePath "${{ github.workflows }}/astro_token/supernova.settings.json"
              
