--- a/astro_token/supernova.settings.json
+++ b/astro_token/supernova.settings.json
@@ -1,6 +1,16 @@
 {
     "mode": "single-file",
-    "mapping": [],
+    "mapping": [{
+            "tokensTheme": "Light",
+            "supernovaBrand": "Default",
+            "supernovaTheme": null
+        },
+        {
+            "tokensTheme": "Dark",
+            "supernovaBrand": "Default",
+            "supernovaTheme": "Dark"
+        }
+    ],
     "settings": {
         "dryRun": false,
         "verbose": false,
