--- a/astro_token/supernova.settings.json
+++ b/astro_token/supernova.settings.json
@@ -1,11 +1,6 @@
 {
     "mode": "single-file",
-    "mapping": [{
-            "tokensTheme": "global",
-            "supernovaBrand": "Default",
-            "supernovaTheme": null
-        }
-    ],
+    "mapping": [],
     "settings": {
         "dryRun": false,
         "verbose": false,
